--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,14 +4,14 @@
    Cdutten custom styles
    ========================================================================== */
 
-#img {	margin: 0 0 10px;
+#img {
+    margin: 0 0 10px;
     display: inline-block;
     transition: transform .5s ease-out;
 }
 
-#description {
-	display: inline-block;
-    padding: 20px;
+.description {
+	margin-bottom: 0px;
 }
 
 #buy_btn {
